# FileForge

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  theme.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: python-ci.yml
modules/: __init__.py  archive_tools.py  comparison_dialog.py  entropy_calculator.py  file_info.py  file_ops.py  file_watcher.py  folder_tools.py  integrity_tools.py  main_window.py  metadata_cache.py  settings_dialog.py  sidebar.py  signature_inspector.py  strings_extractor.py  tab_advanced.py  tab_audio.py  tab_batch.py  tab_folder_analysis.py  tab_hashes.py  tab_integrity.py  tab_overview.py  tab_permissions.py  tab_preview.py  tab_rename.py  tab_signatures.py  tab_strings.py  tab_timestamps.py  theme.py  widgets.py
