[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fileforge"
version = "0.1.0"
description = "Cross-platform desktop application for inspecting and editing file metadata and file attributes."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [ { name = "FileForge" } ]
keywords = ["file", "metadata", "PyQt5", "desktop", "file management"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Win32 (MS Windows)",
  "Environment :: MacOS X",
  "Environment :: X11 Applications :: Qt",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

dependencies = [
  "PyQt5",
  "Pillow",
  "mutagen",
  "PyPDF2",
  "python-docx",
  "python-pptx",
  "openpyxl",
  "py7zr",
  "pymediainfo",
]
urls = { "Repository" = "https://github.com/Yeongwonhan-Jeolmang/FileForge" }

[project.scripts]
fileforge = "main:main"

[tool.setuptools]
packages = ["modules"]
py-modules = ["main"]
